--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html data-theme="forest" lang="en">
+<html lang="en">
 
 <head>
+  <link rel="icon" type="image/png" href="https://i.ibb.co/9HsqFNT/logo.png" />
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Food % Test</title>
+  <title>Food & Test</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Mukta:wght@200;300;400;500;600;700;800&display=swap');
   </style>
@@ -15,5 +15,6 @@
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
+
 
 </html>
